feat: Add a translation button